--- a/_archive/_posts_backlog/2024-08-29-test.md
+++ b/_archive/_posts_backlog/2024-08-29-test.md
@@ -11,7 +11,7 @@ hidden: false
 Lately, I have been reading quite a bit about environmental factors affecting healthcare, or what is more commonly known social determinants of health (SDoH).  These include one's financial situation, social circles, and the places they live, work, and play.  Interestingly, I came across a recent paper which highlights these non-clinical factors as playing a much bigger role in an individual's health outcome than utilizing healthcare services themselves.  What if we lived in a world where our healthcare services were optimized for the sickest of the sick? In this post, I take a look at our government's initiative for health and promising research using LLMs to mine for SDoH from EHRs.
 
 ## White House Healthy People 2030
-Did you know that every decade since 1979, the US Department of Health and Human Services (HHS) puts out an iteration of the Health People Initiative?  This initiative aims to create a healthier nation and track data-driven outcomes to measure progress towards that goal.  In 2020, HHS released the 5th iteration - Healthy People 2030.  
+Did you know that every decade since 1979, the US Department of Health and Human Services (HHS) puts out an iteration of the Health People Initiative?The initiative aims to create a healthier nation and track data-driven outcomes to measure progress towards that goal.  In 2020, HHS released the 5th iteration - Healthy People 2030.  
 
 By background, SDoH has remained a core concept of the Healthy People since its inception, with its definition and importance evolving over time.  According to [https://pmc.ncbi.nlm.nih.gov/articles/PMC8478310], Healthy People 2020 included a goal to address social and physical environments that influence health - a clear commitment to reducing health inequities.  SDoH were defined as “the conditions in the environments where people are born, live, learn, work, play, worship, and age that affect a wide range of health, functioning, and quality-of-life outcomes and risks.”
 
@@ -21,12 +21,9 @@ Here are the 5 social determinants of health domains used in Healthy People:
 
 So what's new for 2030?  SDOH is now a [core priority](https://odphp.health.gov/healthypeople/priority-areas), with health disparaties brought to light during the COVID-19 pandemic.  According to the [Journal of Public Health Management & Practice](https://journals.lww.com/jphmp/Fulltext/2021/11001/Healthy_People_2030__A_Call_to_Action_to_Lead.5.aspx), the pandemic highlighted how many Americans fell into a high-risk category for COVID-19 due to underlying health conditions.  Not surprisingly, this is a reflection of disparities in health, access to care, and underlying social determinants.  
 
-How is improvement measured?  
+A summary of the improvement measures towards the Healthy People 2030 targets can be found [here](https://www.cdc.gov/nchs/healthy_people/hp2030/hp2030-methods.htm).  These are fairly self-explanatory methods, but perhaps the most interesting resource is the [Health Disparities Tracking Tool](https://www.cdc.gov/nchs/data/hp2030/HD_Tracking_Tool_Template.xlsb).  
 
-
-
-
-I am bullish that an SDOH focus is a step in the right direction, as increasing disease burden continues to wear on healthcare stakeholders clinically and financially.
+I think that a SDOH focus is a step in the right direction, as increasing disease burden continues to wear on healthcare stakeholders clinically and financially.
 
 
 ## Mining EHRs for SDOH evidence
